Add flag builder tests